Исправление замечаний после ревью 1. fix post 4